# steam_csmoney

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  bot.dev.env  bot.py  csmoney_parser.dev.env  csmoney_parser.py  docker-compose.yml  logging.yaml  prod.env  pyproject.toml  steam_parser.dev.env  steam_parser.py  worker.dev.env  worker.py
.github/workflows/: testing.yml
common/: .gitignore  env_var.py  rabbitmq_connector.py  redis_connector.py  tracer.py
common/core/: dataclass_json.py
common/rpc/: message.py  message_channel.py  queue_factory.py  queue_listener.py  queue_publisher.py  queue_reader.py  rabbitmq_client.py
price_monitoring/: __init__.py  async_runner.py  common.py  constants.py  decorators.py  logs.py  types.py
price_monitoring/features/overpay/: __init__.py  base_price_filler.py  generate_list.py  overpay_reference.py  overpay_sort.py
price_monitoring/models/: csmoney.py  steam.py
price_monitoring/parsers/: __init__.py  abstract_parser.py
price_monitoring/parsers/csmoney/: __init__.py  csmoney_parser.py
price_monitoring/parsers/steam/: __init__.py  steam_order_parser.py  steam_sell_history_parser.py
price_monitoring/queues/: __init__.py  abstract_csmoney_result_queue.py  abstract_market_name_queue.py  abstract_steam_order_queue.py  abstract_steam_sell_history_queue.py
price_monitoring/queues/rabbitmq/: __init__.py  csmoney_result_queue.py  market_name_queue.py  steam_result_queue.py  steam_sell_history_queue.py
price_monitoring/storage/csmoney/: __init__.py  abstract_csmoney_item_storage.py  redis_csmoney_item_storage.py
price_monitoring/storage/proxy/: __init__.py  abstract_proxy_storage.py  redis_proxy_storage.py
price_monitoring/storage/steam/: __init__.py  abstract_steam_orders_storage.py  abstract_steam_sell_history_storage.py  redis_steam_orders_storage.py  redis_steam_sell_history_storage.py
price_monitoring/telegram/: models.py  steam_fee.py
price_monitoring/telegram/bot/: __init__.py  abstract_bot.py  abstract_command.py  abstract_settings.py  abstract_whitelist.py  aiogram_bot.py  notification_formatter.py  redis_settings.py  redis_whitelist.py
price_monitoring/telegram/fresh_filter/: __init__.py  abstract_filter.py  redis_filter.py
price_monitoring/telegram/offer_provider/: __init__.py  (+5 more)
price_monitoring/worker/: __init__.py  worker.py
proxy_http/: aiohttp_session_factory.py  async_proxies_concurrent_limiter.py  decorators.py  proxy.py
proxy_http/aiohttp_addons/: aihttp_socks_connector.py
tests/: conftest.py
tests/models/: test_steam.py
tests/telegram/: test_models.py  test_steam_fee.py
tests/worker/: test_worker.py
utils/: create_csmoney_tasks.py  upload_proxies.env  upload_proxies.py
(+125 files in other folders)
